// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab tests props active 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  margin: 26px 0 30px 0;
}

.c0::after {
  content: "";
  height: 1px;
  width: 100%;
  position: absolute;
  bottom: 0.5px;
  left: 0;
  background-color: #CCCCCC;
}

<div
  className="c0"
/>
`;

exports[`with props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  margin: 26px 0 30px 0;
}

.c0::after {
  content: "";
  height: 1px;
  width: 100%;
  position: absolute;
  bottom: 0.5px;
  left: 0;
  background-color: #CCCCCC;
}

<div
  class="c0"
/>
`;
